o swagger nao estava a dar algumas funcionalidades agora esta  arranjado
